# synupkeep

./: .build.yml  .crontab.docker  .dockerignore  CHANGELOG.md  Dockerfile  README.md  docker-cmd-cron.sh  docker-cmd-run.sh  docker-compose.yml.example  pyproject.toml
.github/workflows/: docker-publish.yml
synupkeep/: __init__.py  __main__.py
